# openclaw-memory-sync

./: .gitignore  Makefile  README.md  SECURITY.md  SKILL.md  TASK_FLATTEN_FOR_CLAWHUB.md  pyproject.toml
docs/: INCREMENTAL_BACKFILL.md
memory-sync/: SKILL.md  memory_sync.py
references/: SECRET_PATTERNS.md
scripts/: memory_sync.py
src/memory_sync/: __init__.py  backfill.py  cli.py  compare.py  models.py  parser.py  sanitize.py  sessions.py  state.py  summarize.py  transitions.py  validate.py
src/memory_sync/templates/: daily.md.j2
tests/: __init__.py  conftest.py  test_backfill.py  test_cli.py  test_compare.py  test_memory_sync.py  test_parser.py  test_sanitize.py  test_sanitize_integration.py  test_sessions.py  test_state.py  test_transitions.py  test_validate.py
tests/fixtures/: malformed.jsonl  model_transitions.jsonl  sample_session.jsonl  sample_session_small.jsonl
tests/fixtures/memory/: 2026-01-15.md  2026-01-16.md
