[project]
name = "memory-sync"
version = "0.1.0"
description = "OpenClaw session log scraping and memory backfill tool"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
summarize = [
    "anthropic>=0.40.0",
]
all = [
    "memory-sync[dev,summarize]",
]

[project.scripts]
memory-sync = "memory_sync.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
